eighth attempt at fixing the viewport issue with the background on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -25,7 +25,8 @@ body {
   background-color: #000;
   color: #fff;
   font-family: "Manrope", sans-serif;
-  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 header {
